# domestigator

./: dom.py  pyproject.toml
src/: domestigator.py
tests/: test_dom.py
