[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "domestigator"
version = "0.1.0"
description = "Tool to domesticate out Golden Gate sites"
authors = [{name = "Adrian Barrera-Velasquez", email = "abarre16@my.smccd.edu"}]
readme = ""
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" =  "src"}

[tool.setuptools.packages.find]
where = ["src"]

